# vm-on-golem

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  VISUALS_VISION.md  conftest.py  git.diff  test_multipass.py
discovery-server/: .coveragerc  README.md  pyproject.toml  pytest.ini  run.py
discovery-server/discovery/api/: models.py  routes.py
discovery-server/discovery/db/: models.py  repository.py  session.py
discovery-server/tests/: test_advertisements_pricing.py  test_main_background.py  test_models_and_config.py  test_repository_async.py  test_routes.py  test_routes_direct.py  test_session_migrations.py
provider-server/: .cov.txt  .coveragerc  .env.dev  README.md  cli_runner.py  pyproject.toml  pytest.ini  run.py  test_coverage_report.md
provider-server/provider/: config.py  main.py
provider-server/provider/api/: models.py  routes.py
provider-server/provider/discovery/: advertiser.py  golem_base_advertiser.py  resource_tracker.py
provider-server/provider/network/: port_verifier.py
provider-server/provider/utils/: ascii_art.py  port_display.py
provider-server/provider/vm/: cloud_init.py  models.py  multipass.py  multipass_adapter.py  nginx_manager.py  port_manager.py  proxy_manager.py  service.py
provider-server/tests/: conftest.py  test_api_errors.py
provider-server/tests/api/: test_access_and_streams.py  test_models_validation.py  test_provider_info.py  test_routes.py  test_stream_gating.py
provider-server/tests/cli/: test_config_cli.py  test_help_cli.py  test_pricing_cli.py  test_streams_earnings_withdraw.py
provider-server/tests/discovery/: test_advertisers.py  test_golem_base_advertiser_lifecycle.py  test_payments_network_annotation.py
provider-server/tests/payments/: test_blockchain_client_signed_tx_fields.py  test_monitor.py  test_provider_startup_reconcile.py
provider-server/tests/security/: test_faucet.py  test_l2_faucet.py
provider-server/tests/utils/: test_pricing.py  test_pricing_updater.py
provider-server/tests/vm/: test_multipass_adapter.py  (+1 more)
requestor-server/: .env.dev  README.md  pyproject.toml  pytest.ini  run.py
requestor-server/requestor/: config.py  run.py
requestor-server/tests/: test_api.py  test_cli_create.py  test_cli_help.py  test_cli_json_output.py  test_cli_list_providers_estimate.py  test_cli_stream_list.py  test_cli_vm_aliases.py  test_cli_vm_info.py  test_config.py  test_database_service.py  test_db_sqlite.py  test_errors.py  test_payments_network_filter.py  test_provider_listing_prices.py  test_provider_service.py  test_run.py  test_ssh_manager.py  test_ssh_service.py  test_utils_logging.py  test_utils_spinner.py  test_vm_service.py
(+144 files in other folders)
