[tool.poetry]
name = "golem-vm-discovery"
version = "0.1.0"
description = "VM on Golem Discovery Service"
authors = ["Golem Factory <contact@golem.network>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.23"}
alembic = "^1.7.1"
aiosqlite = "^0.17.0"
pydantic = "^1.8.2"
cryptography = "^3.4.7"
prometheus-client = "^0.11.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
pylint = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
