[tool.poetry]
name = "golem-vm-provider"
version = "0.1.0"
description = "VM on Golem Provider Node"
authors = ["Golem Factory <contact@golem.network>"]
packages = [
    { include = "provider" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
aiohttp = "^3.8.1"
psutil = "^5.9.0"
pydantic = "^1.8.2"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^3.4.7"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
eth-account = "^0.8.0"
setuptools = "^69.0.3"
colorlog = "^6.8.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
pylint = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
