[tool.poetry]
name = "golem-requestor"
version = "0.1.0"
description = "VM on Golem Requestor CLI"
authors = ["Golem Team"]
packages = [
    { include = "requestor" }
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
pydantic = "^1.8.2"
cryptography = "^3.4.7"
asyncssh = "^2.7.0"
aiohttp = "^3.7.4"
aiosqlite = "^0.17.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
golem = "requestor.cli.commands:main"
